name:                hw02
version:             0.1.0.0
license:             Proprietary
license-file:        LICENSE
author:              Stephanie Weirich
maintainer:          sweirich@cis.upenn.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10


executable hw02
  main-is:             Main.hs
  other-modules:       Play
                      , XMLTypes
  build-depends:       base >= 1.14, HUnit >=1.6, directory >=1.3.6 && <1.4
  ghc-options:         -Wno-type-defaults -Wincomplete-patterns
  default-language:    Haskell2010

